
[TestApp/focus - 1]
[32m╭─[0m[1;32mMessage Assistant[m[32m──╮[m╭─Thread─────────────────────────────────╮
[32m│[m[37m[m[7;37m [m                   [32m│[m│                                        │
[32m│[m[30m                    [m[32m│[m│                                        │
[32m│[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Threads────────────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯╰────────────────────────────────────────╯
---

[TestApp/focus - 2]
╭─Message Assistant──╮╭─Thread─────────────────────────────────╮
│[37m[m[7;37m [m                   ││                                        │
│[30m                    [m││                                        │
│[30m                    [m││                                        │
╰────────────────────╯│                                        │
[32m╭─[0m[1;32mThreads[m[32m────────────╮[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m╰────────────────────╯[m╰────────────────────────────────────────╯
---

[TestApp/focus - 3]
╭─Message Assistant──╮[32m╭─[0m[1;32mThread[m[32m─────────────────────────────────╮[m
│[37m[m[7;37m [m                   │[32m│[m                                        [32m│[m
│[30m                    [m│[32m│[m                                        [32m│[m
│[30m                    [m│[32m│[m                                        [32m│[m
╰────────────────────╯[32m│[m                                        [32m│[m
╭─Threads────────────╮[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
╰────────────────────╯[32m╰────────────────────────────────────────╯[m
---

[TestApp/focus - 4]
[32m╭─[0m[1;32mMessage Assistant[m[32m──╮[m╭─Thread─────────────────────────────────╮
[32m│[m[37m[m[7;37m [m                   [32m│[m│                                        │
[32m│[m[30m                    [m[32m│[m│                                        │
[32m│[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Threads────────────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯╰────────────────────────────────────────╯
---

[TestApp/input - 1]
[32m╭─[0m[1;32mMessage Assistant[m[32m──╮[m╭─Thread─────────────────────────────────╮
[32m│[m[37m[mhey[7;37m [m                [32m│[m│                                        │
[32m│[m[30m                    [m[32m│[m│                                        │
[32m│[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Threads────────────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯╰────────────────────────────────────────╯
---

[TestApp/input - 2]
[32m╭─[0m[1;32mMessage Assistant[m[32m──╮[m╭─Thread─────────────────────────────────╮
[32m│[m[37m[m[7;37m [m                   [32m│[m│                                     hey│
[32m│[m[30m                    [m[32m│[m│                                        │
[32m│[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Threads────────────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯╰────────────────────────────────────────╯
---
